# babushka

./: CHANGELOG.md  Cargo.toml  LICENSE  todo.md
.github/workflows/: release.yml
database/migrations/: 001_initial.sql  001_teachers.sql  002_students.sql  002_teachers.sql  003_courses.sql  004_courses.sql  004_enrollments.sql  005_payments.sql  006_classes.sql  007_class_bookings.sql  007_courses_price_split.sql  008_enrollment_settlement.sql  009_embed_payment_into_enrollment.sql  010_enrollment_payment_notes.sql  011_optional_email.sql  999_dev_seed.sql
src/: app.rs  main.rs  theme.rs
src/application/: mod.rs
src/application/course/: create.rs  delete.rs  dto.rs  errors.rs  get_all.rs  update.rs
src/application/course_period/: create.rs  delete.rs  dto.rs  errors.rs  get_by_course.rs
src/application/dashboard/: mod.rs
src/application/enrollment/: create.rs  delete.rs  delete_payment.rs  dto.rs  errors.rs  get_all.rs  get_by_student.rs  mod.rs  pay.rs  set_dropped.rs  update_status.rs
src/application/payment/: create.rs  delete.rs  dto.rs  errors.rs  get_all.rs  get_by_student.rs  mark_paid.rs  mod.rs
src/application/student/: create.rs  delete.rs  dto.rs  errors.rs  get_all.rs  get_by_id.rs  update.rs
src/application/student_ledger/: mod.rs
src/application/teacher/: create.rs  delete.rs  dto.rs  errors.rs  get_all.rs  get_by_id.rs  list.rs  mod.rs  update.rs
src/domain/: mod.rs
src/domain/course/: mod.rs  repository.rs
src/infrastructure/: mod.rs
src/presentation/: mod.rs  notifications.rs  students.rs  table.rs  teachers.rs
src/views/: students.rs  teachers.rs
(+46 files in other folders)
