[package]
name = "aries"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
eframe = "0.34.3"
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4"] }
postgresql_embedded = "0.20.2"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1.23.2", features = ["v4"] }
