[package]
name = "babushka"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dirs = "6.0.0"
eframe       = "0.34.3"
egui_extras  = { version = "0.34", features = ["default"] }
log = "0.4"
log4rs = "1.3"
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4"] }
postgresql_embedded = "0.20.2"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1.23.2", features = ["v4"] }
