[package]
name = "babushka"
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dirs = "6.0.0"
eframe       = "0.34.3"
egui-phosphor = "0.12.0"
egui_extras  = { version = "0.34", features = ["default"] }
log = "0.4"
log4rs = "1.3"
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4"] }
postgresql_embedded = "0.20.2"
self_update = { version = "0.39", features = ["archive-zip", "compression-zip-deflate"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1.23.2", features = ["v4"] }
